Kubernetes/GoogleKubernetesEngine/03_Ingress/01_nginx_deploy.yaml

apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: nginx-deployment
spec: 
  replicas: 10
  selector: 
    matchLabels: 
      app: nginx 
  template: 
    metadata: 
      name: nginx-pod 
      labels:
        app: nginx 
    spec: 
      containers: 
        - name: nginx01
          image: nginx 
          ports: 
            - containerPort: 80 

---
apiVersion: v1
kind: Service 
metadata: 
  name: nginx 
spec: 
  selector: 
    app: nginx 
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80 
      protocol: TCP
