Kubernetes/GoogleKubernetesEngine/03_Ingress/02_httpd_deploy.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: httpd-lb-deployment 
spec: 
  replicas: 10
  selector: 
    matchLabels: 
      app: httpd 
  template: 
    metadata: 
      name: httpd-pod 
      labels:
        app: httpd 
    spec: 
      containers: 
        - name: httpd01
          image: httpd 
          ports: 
            - containerPort: 80 

---
apiVersion: v1
kind: Service 
metadata: 
  name: httpd
spec: 
  selector: 
    app: httpd 
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80 
      protocol: TCP
