Kubernetes/GoogleKubernetesEngine/03_Ingress/04_Ingress_resource_hostName.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$
spec: 
  ingressClassName: nginx
  rules: 
  - host: www.nginx.com
    http: 
      paths: 
      - path: / 
        pathType: Prefix 
        backend: 
          service: 
            name: nginx 
            port: 
              number: 80     
  - host: www.httpd.com
    http: 
      paths: 
      - path: / 
        pathType: Prefix 
        backend: 
          service: 
            name: httpd 
            port: 
              number: 80
